# ctldash

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  com.github.nikelaz.CTLDash.json  io.github.nikelaz.CTLDash.json  justfile  package-lock.json
.github/workflows/: deploy.yml
i18n/bg/: ctl_dash.ftl
i18n/en/: ctl_dash.ftl
resources/: app.desktop  app.metainfo.xml  com.github.nikelaz.CTLDash.metainfo.xml  io.github.nikelaz.CTLDash.desktop  io.github.nikelaz.CTLDash.metainfo.xml
src/: app.rs  main.rs  message.rs  systemd.rs  types.rs  update.rs
src/pages/: about.astro  index.astro
src/views/: mod.rs  service_detail.rs  service_list.rs
