[package]
name = "ctl-dash"
version = "1.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Displays services and logs and allows you to enable/disable/start/stop/restart every service."
repository = "https://github.com/nikelaz/ctl-dash"

[dependencies]
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.3"
rust-embed = "8.9.0"
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "aabc8dcda530a6ac70617dd578cea55910af53c8"
features = [
    "a11y",
    "about",
    "dbus-config",
    "multi-window",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]
